[package]
name = "reqwest_dav"
version = "0.1.1"
edition = "2021"
description = "An async webdav client with tokio and reqwest"
license = "MIT"
repository = "https://github.com/niuhuan/reqwest_dav"

[dependencies]
digest_auth = { git = "https://github.com/APG-lab/digest_auth" }
reqwest = { version = "0.11", features = ["stream"] }
url = "2.3.1"
tokio = { version = "1.0", features = [] }
http = "0.2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0.144"
serde-xml-rs = "0.6.0"
serde_json = "1.0"
async-trait = "0.1.57"

